# open-webui-rust

./: README.md  README.zh-CN.md  docker-compose.dev.yaml  docker-compose.yaml  env.example
rust-backend/: Cargo.toml  MIGRATION_CHECKLIST.md  MIGRATION_FILES.txt  MIGRATION_GUIDE.md  MIGRATION_STATUS.md  MIGRATION_SUMMARY.md  OPTION_A_COMPLETE.md  OPTION_A_STATUS.md  PHASE2_PROGRESS.md  README_OPTION_A.md  SESSION_PROGRESS.md  analyze_migration.py  env.example
rust-backend/migrations/postgres/: 011_oauth_session_table.sql
rust-backend/migrations/sqlite/: 001_initial.sql  002_add_missing_columns.sql  003_add_config_table.sql  004_add_channel_messages.sql  005_add_note_feedback_tables.sql  006_add_folder_data_column.sql  007_add_file_columns.sql  008_add_group_data_column.sql  009_make_message_chat_id_nullable.sql  010_fix_chat_timestamps.sql
rust-backend/scripts/: generate_oauth_keys.sh
rust-backend/src/: config.rs  db.rs  error.rs  main.rs  main_axum.rs
rust-backend/src/models/: auth.rs  oauth_session.rs  user.rs
rust-backend/src/routes/: auth.rs  configs.rs  mod.rs  oauth.rs  users.rs
rust-backend/src/services/: auth.rs  mod.rs  oauth_manager.rs  oauth_provider.rs  oauth_session.rs  user.rs
rust-backend/src/utils/: fernet.rs  mod.rs
svelte-frontend/src/lib/components/common/: RichTextInput.svelte
